objects/Legal_Performance_Questionnaire__c.object
<CustomObject>
    <description>Legal Post Invoice Surveys</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalLegalCounselName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>External Legal Counsel Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>On/Off Panel Law Firm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legal Performance Questionnaires</relationshipLabel>
        <relationshipName>Legal_Performance_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <label>Help Text</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rating__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>5 - Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Jurisdiction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LawFirm__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Law Firm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>On/Off Panel Law Firm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Legal Performance Questionnaires</relationshipLabel>
        <relationshipName>Legal_Performance_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatterSpendDocument__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Matter Spend Document</label>
        <referenceTo>Matter_Spend_Document__c</referenceTo>
        <relationshipLabel>Legal Performance Questionnaires</relationshipLabel>
        <relationshipName>Legal_Performance_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Legal Performance Questionnaires</relationshipLabel>
        <relationshipName>Legal_Performance_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LEAP_Law_Firm_Survey_Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequiredLegalAdviceWork__c</fullName>
        <label>Required Legal Advice/Work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Law_Firm_Questionnaire_Advice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValueofRating__c</fullName>
        <formula>VALUE(TEXT(Rating__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value of Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Legal Performance Questionnaire</label>
    <nameField>
        <displayFormat>Survey-{0000}</displayFormat>
        <label>Legal Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Performance Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>